--- a/civ5.env.templ
+++ b/civ5.env.templ
@@ -2,9 +2,9 @@ CIV_DATA_ROOT="/root/.wine/drive_c/users/root/Documents/My Games/Sid Meier's Civ
 DISCORD_WEBHOOK_ID_FILE="/run/secrets/discord_webhook_id"
 DISCORD_WEBHOOK_TOKEN_FILE="/run/secrets/discord_webhook_token"
 DISPLAY=:99
-GALLIUM_DRIVER=llvmpipe
-LIBGL_ALWAYS_SOFTWARE=1
-MESA_LOADER_DRIVER_OVERRIDE=llvmpipe
+DXVK_FILTER_DEVICE_NAME="llvmpipe"
+DXVK_FRAME_RATE=2
 NTFY_TOPIC_FILE="/run/secrets/ntfy_topic"
+STEAM_DLLS="steamclient.dll tier0_s.dll vstdlib_s.dll"
 TZ="@TIMEZONE@"
-VNC_PORT=5900
+XVFB_RESOLUTION=1600x900x24
