Added attempt_autostart.bash script utilizing xdotool to automatically load and start civ5 using the latest autosave, added a patch to StagingRoom.lua that writes to a small sqlite file as an indicator that the server has started, removed ability to set desktop resolution manually because we use manual x,y coordinates for xdotool to work properly, removed civ5.env file in favor of env variables in the docker-compose.yml; constantly sourcing the env file during the image build is annoying and this works just fine, added dos2unix package to make sure the GraphicsSettingsDX9.ini file is in dos format after we edit it, migrated all of the commands under the civ5server supervisord program to a run_civ.bash script because specifying a long one-line command was becomming unwieldy, updated the json_file_helper.py script with the new 'crash' parameter to set a flag when civ5 has crashed; this is used on the scheduled_turn_notifications.bash script (to abort a notification) and in the tx_player_turns.bash script to force a notfication when the server recovers, also updated the json_file_helper.py script to allow setting a specific parameter, added lines to manually set the desktop resolution in GraphicsSettingsDX9.ini because if civ5 crashes when a display is unavailable it reverts to 1024x768 which breaks the attempt_autostart.bash script, updated server_down_notifier.bash script to update our json file when civ5 has crashed, updated supervisord.conf to delete the old display lock file using the display variable provided in docker-compose; added printenv to the cron program so cron jobs can reference the needed env variables during execution, added logic to the tx_player_turns.bash script to always send a notification when a player disconnects and either a.) the server has just started or b.) the server has started after crashing.

--- a/docker-compose.yml.templ
+++ b/docker-compose.yml.templ
@@ -7,14 +7,24 @@ services:
     build:
       context: "./"
       args:
+        - CIV_DATA_ROOT=/root/.wine/drive_c/users/root/Documents/My Games/Sid Meier's Civilization 5
+        - DISPLAY=:99
+        - STEAM_DLLS=steamclient.dll tier0_s.dll vstdlib_s.dll
         - STEAM_INSTALL_SLEEP_TIMER=120
+    environment:
+      - DISCORD_WEBHOOK_ID_FILE=/run/secrets/discord_webhook_id
+      - DISCORD_WEBHOOK_TOKEN_FILE=/run/secrets/discord_webhook_token
+      - DXVK_FILTER_DEVICE_NAME=llvmpipe
+      - DXVK_FRAME_RATE=2
+      - NTFY_TOPIC_FILE=/run/secrets/ntfy_topic
+      - TZ=@TIMEZONE@
+      - VNC_PORT=5900
     volumes:
       - "@CIVDIR@/civ5game:/root/civ5game"
       - "@CIVDIR@/civ5save:/root/.wine/drive_c/users/root/Documents/My Games/Sid Meier's Civilization 5"
     ports:
       - "127.0.0.1:5900:5900/tcp"
       - "0.0.0.0:27016:27016/udp"
-    env_file: "civ5.env"
     secrets:
       - ntfy_topic
       - discord_webhook_id
