--- a/docker-compose.yml.templ
+++ b/docker-compose.yml.templ
@@ -7,21 +7,24 @@ services:
     build:
       context: "./"
       args:
-        - CIV_DATA_ROOT=/root/.wine/drive_c/users/root/Documents/My Games/Sid Meier's Civilization 5
+        - CIV_DATA_ROOT=/home/@CONTAINER_USERNAME@/Games/umu/umu-default/drive_c/users/game/Documents/My Games/Sid Meier's Civilization 5
+        - CONTAINER_GID=@CONTAINER_GID@
+        - CONTAINER_UID=@CONTAINER_UID@
+        - CONTAINER_USERNAME=@CONTAINER_USERNAME@
         - DISPLAY=:99
+        - GPU_BUSID=1:0:0
         - STEAM_DLLS=steamclient.dll tier0_s.dll vstdlib_s.dll
         - STEAM_INSTALL_SLEEP_TIMER=120
     environment:
       - DISCORD_WEBHOOK_ID_FILE=/run/secrets/discord_webhook_id
       - DISCORD_WEBHOOK_TOKEN_FILE=/run/secrets/discord_webhook_token
-      - DXVK_FILTER_DEVICE_NAME=llvmpipe
       - DXVK_FRAME_RATE=2
       - NTFY_TOPIC_FILE=/run/secrets/ntfy_topic
       - TZ=@TIMEZONE@
       - VNC_PORT=5900
     volumes:
-      - "@CIVDIR@/civ5game:/root/civ5game"
-      - "@CIVDIR@/civ5save:/root/.wine/drive_c/users/root/Documents/My Games/Sid Meier's Civilization 5"
+      - "@CIVDIR@/civ5game:/home/@CONTAINER_USERNAME@/civ5game"
+      - "@CIVDIR@/civ5save:/home/$CONTAINER_USERNAME@/Games/umu/umu-default/drive_c/users/@CONTAINER_USERNAME@/Documents/My Games/Sid Meier's Civilization 5"
     ports:
       - "127.0.0.1:5900:5900/tcp"
       - "0.0.0.0:27016:27016/udp"
@@ -29,6 +32,10 @@ services:
       - ntfy_topic
       - discord_webhook_id
       - discord_webhook_token
+    privileged: true
+    devices:
+      - /dev/kfd
+      - /dev/dri
 secrets:
   ntfy_topic:
     file: ntfy_topic.txt
