Add Proton-GE version variable

--- a/docker-compose.yml.templ
+++ b/docker-compose.yml.templ
@@ -12,6 +12,7 @@ services:
         - CONTAINER_UID=@CONTAINER_UID@
         - CONTAINER_USERNAME=@CONTAINER_USERNAME@
         - DISPLAY=:99
+        - GE_PROTON_VERSION=latest
         - GPU_BUSID=@GPU_BUSID@
         - STEAM_DLLS=steamclient.dll tier0_s.dll vstdlib_s.dll
         - STEAM_INSTALL_SLEEP_TIMER=120
